test/org/midica/testfiles/failing/global-partial-order.midica
INCLUDE inc/instruments.midica

* 0,2-2,3

0 c /4
